[package]
name = "lssg"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.17.11"
logos = "0.15.0"
owo-colors = "4.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.23"
